# Jessica-CustomAvatars

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs  build.txt
.devcontainer/: Dockerfile  devcontainer.json
crates/jessica/: Cargo.toml
crates/jessica-core/: Cargo.toml
crates/jessica-core/src/deformers/: deformer.rs  mod.rs  smpl_deformer.rs  snarf_deformer.rs
crates/jessica-core/src/models/networks/: ngp.rs
crates/jessica-core/tests/: fast_snarf_filter.rs
crates/jessica-fast-snarf/: Cargo.toml  build.rs
crates/jessica-fast-snarf/src/: fast_snarf_deformer.rs  filter.rs  fuse.rs  lib.rs  precompute.rs
crates/jessica-fast-snarf/src/cuda/: c_filter_kernel.cu  c_fuse.cpp  c_precompute_kernel.cu  mod.rs
crates/jessica-knn-points/: Cargo.toml  README.md  build.rs
crates/jessica-knn-points/src/: knn.rs  lib.rs
crates/jessica-knn-points/src/cuda/: c_knn.cpp  mod.rs
crates/jessica-mesh-utils/: Cargo.toml  build.rs
crates/jessica-mesh-utils/src/cuda/: unbatched_triangle_distance.cpp  unbatched_triangle_distance_cuda.cu
crates/jessica-mesh-utils/src/cuda/include/: utils.h
crates/jessica-model-renderer/: Cargo.toml  build.rs
crates/jessica-model-renderer/src/: lib.rs  raymarcher_kernel.rs
crates/jessica-model-renderer/src/cuda/: c_raymarcher.cpp  c_raymarcher_kernel.cu  mod.rs
crates/jessica-model-renderer/src/renderer/: mod.rs  raymarcher_renderer.rs  renderer.rs
crates/jessica-smpl/: .gitignore  Cargo.toml  README.md  build.rs  smpl_log.py
crates/jessica-smpl/src/: body_models.rs  lbs.rs  lib.rs  main.rs  vertex_joints.rs
crates/jessica-smpl/src/model/: data.rs  mod.rs  python.rs
crates/jessica-smpl/tests/: test_body_models.rs
crates/jessica-tcnn-networks/: Cargo.toml  LICENSE  build.rs
crates/jessica-tcnn-networks/src/cpp/: README.md  bindings.cpp  bindings.h  mod.rs  tcnn.cpp
crates/jessica-tcnn-networks/src/cpp/include/: bindings.h
crates/jessica-tcnn-networks/src/cpp/include/json/: json.hpp
crates/jessica-tcnn-networks/src/cpp/include/pybind11/: functional.h  pybind11.h
crates/jessica-tcnn-networks/src/cpp/include/pybind11/detail/: common.h
crates/jessica-tcnn-networks/src/cpp/include/pybind11_json/: pybind11_json.hpp
crates/jessica-utils/: Cargo.toml  LICENSE
crates/jessica-utils/src/: data.rs  lib.rs  mesh_ops.rs  module.rs  tensor.rs  var_store.rs
crates/jessica/src/: lib.rs
crates/jessica/src/deformers/: deformer.rs  smpl_deformer.rs  snarf_deformer.rs
crates/jessica/src/models/: mod.rs
crates/jessica/src/models/networks/: mod.rs
crates/jessica/tests/: fast_snarf_fuse.rs  fast_snarf_precompute.rs  knn_points_idx.rs  tcnn_networks.rs
fast_snarf/: Cargo.toml  build.rs
fast_snarf/src/: deformer.rs  fast_snarf_deformer.rs  filter.rs  fuse.rs  lib.rs  precompute.rs  tensor_utils.rs
fast_snarf/src/cuda/: c_filter.cpp  c_fuse.cpp  c_fuse_kernel.cu  c_precompute.cpp  c_precompute_kernel.cu  filter_cuda.cpp  filter_kernel.cu  mod.rs
knn_points/: Cargo.toml  build.rs
knn_points/src/cuda/: c_knn.cpp
renderer/: Cargo.toml
smplx/: Cargo.toml  README.md
smplx/src/: constants.rs  lbs.rs  lib.rs  vertex_joints.rs
src/: main.rs
src/deformers/: deformer.rs  mod.rs  smpl_deformer.rs  snarf_deformer.rs
tensor_utils/: Cargo.toml  README.md
tensor_utils/src/: data.rs  lib.rs  module.rs  tensor.rs
tests/: README.md  fast_snarf_filter.rs  fast_snarf_fuse.rs  fast_snarf_precompute.rs  filter.rs  knn_points_idx.rs
tests/fast_snarf/: filter.rs
