[package]
name = "JessicaInference"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.16.0"
fast_snarf = { path = "./fast_snarf" }
renderer = { path = "./renderer" }
knn_points = { path = "./knn_points" }


[build-dependencies]
cc = "1.0"

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"