[workspace]
resolver = "2"

members = [
    "crates/jessica",
    "crates/jessica-fast-snarf",
    "crates/jessica-knn-points",
    "crates/jessica-smpl",
    "crates/jessica-tcnn-networks",
    "crates/jessica-utils",
]

[workspace.dependencies]
tch = "0.16.0"
torch-sys = "0.16.0"
log = "0.4.22"
cc = "1.0"

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"

[workspace.lints.clippy]
