[package]
name = "fast_snarf"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.16.0"
torch-sys = "0.16.0"
knn_points = { path = "../knn_points" }
tensor_utils = { path = "../tensor_utils" }

[build-dependencies]
cc = "1.0"

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"