[package]
name = "jessica-fast-snarf"
version = "0.1.0"
edition = "2021"

[dependencies]
jessica-knn-points = { path = "../jessica-knn-points" }
jessica-utils = { path = "../jessica-utils" }

[build-dependencies]
cc = "1.0"

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"

[lints]
workspace = true