[package]
name = "jessica-fast-snarf"
version = "0.1.0"
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true

jessica-knn-points = { path = "../jessica-knn-points" }
jessica-utils = { path = "../jessica-utils" }

[build-dependencies]
cc.workspace = true

[lints]
workspace = true