[package]
name = "jessica-knn-points"
version = "0.1.0"
edition = "2021"
authors = ["Alec Dusheck", "Triform"]

[dependencies]
jessica-utils = { path = "../jessica-utils" }

[build-dependencies]
cc = "1.0"

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"

[lints]
workspace = true