[package]
name = "jessica-knn-points"
version = "0.1.0"
edition = "2021"
authors = ["Alec Dusheck", "Triform"]

[dependencies]
tch.workspace = true
torch-sys.workspace = true

jessica-utils = { path = "../jessica-utils" }

[build-dependencies]
cc.workspace = true

[env]
LIBTORCH = { value = "/usr/local/libtorch", relative = false }
TORCH_CUDA_VERSION = "cu121"

[lints]
workspace = true