[package]
name = "jessica"
version = "0.1.0"
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true

jessica-fast-snarf = { path = "../jessica-fast-snarf" }
renderer = { path = "../renderer" }
jessica-knn-points = { path = "../jessica-knn-points" }
jessica-utils = { path = "../jessica-utils" }
jessica-smpl = { path = "../jessica-smpl" }
jessica-tcnn-networks = { path = "../jessica-tcnn-networks" }

[lints]
workspace = true